# glslang

./: .gitignore  BUILD.bazel  MODULE.bazel
glslang/: build_info.h
glslang/MachineIndependent/: ParseHelper.cpp  ShaderLang.cpp
