cc_library(
    name = "spriv",
    srcs = [
        "SPIRV/CInterface/spirv_c_interface.cpp",
        "SPIRV/GLSL.ext.AMD.h",
        "SPIRV/GLSL.ext.ARM.h",
        "SPIRV/GLSL.ext.EXT.h",
        "SPIRV/GLSL.ext.KHR.h",
        "SPIRV/GLSL.ext.NV.h",
        "SPIRV/GLSL.std.450.h",
        "SPIRV/GlslangToSpv.cpp",
        "SPIRV/InReadableOrder.cpp",
        "SPIRV/Logger.cpp",
        "SPIRV/NonSemanticDebugPrintf.h",
        "SPIRV/NonSemanticShaderDebugInfo100.h",
        "SPIRV/SpvBuilder.cpp",
        "SPIRV/SpvBuilder.h",
        "SPIRV/SpvPostProcess.cpp",
        "SPIRV/SpvTools.cpp",
        "SPIRV/SpvTools.h",
        "SPIRV/bitutils.h",
        "SPIRV/disassemble.cpp",
        "SPIRV/doc.cpp",
        "SPIRV/doc.h",
        "SPIRV/hex_float.h",
        "SPIRV/spvIR.h",
    ],
    hdrs = [
        "SPIRV/GlslangToSpv.h",
        "SPIRV/Logger.h",
        "SPIRV/disassemble.h",
        "SPIRV/spirv.hpp",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "glslang_machine_independent",
    srcs = [
        "glslang/MachineIndependent/Constant.cpp",
        "glslang/MachineIndependent/InfoSink.cpp",
        "glslang/MachineIndependent/Initialize.cpp",
        "glslang/MachineIndependent/IntermTraverse.cpp",
        "glslang/MachineIndependent/Intermediate.cpp",
        "glslang/MachineIndependent/ParseContextBase.cpp",
        "glslang/MachineIndependent/ParseHelper.cpp",
        "glslang/MachineIndependent/PoolAlloc.cpp",
        "glslang/MachineIndependent/RemoveTree.cpp",
        "glslang/MachineIndependent/Scan.cpp",
        "glslang/MachineIndependent/ShaderLang.cpp",
        "glslang/MachineIndependent/SpirvIntrinsics.cpp",
        "glslang/MachineIndependent/SymbolTable.cpp",
        "glslang/MachineIndependent/Versions.cpp",
        "glslang/MachineIndependent/attribute.cpp",
        "glslang/MachineIndependent/glslang_tab.cpp",
        "glslang/MachineIndependent/intermOut.cpp",
        "glslang/MachineIndependent/iomapper.cpp",
        "glslang/MachineIndependent/limits.cpp",
        "glslang/MachineIndependent/linkValidate.cpp",
        "glslang/MachineIndependent/parseConst.cpp",
        "glslang/MachineIndependent/preprocessor/Pp.cpp",
        "glslang/MachineIndependent/preprocessor/PpAtom.cpp",
        "glslang/MachineIndependent/preprocessor/PpContext.cpp",
        "glslang/MachineIndependent/preprocessor/PpScanner.cpp",
        "glslang/MachineIndependent/preprocessor/PpTokens.cpp",
        "glslang/MachineIndependent/propagateNoContraction.cpp",
        "glslang/MachineIndependent/reflection.cpp",
        "glslang/build_info.h",
    ],
    hdrs = [
        "glslang/MachineIndependent/Initialize.h",
        "glslang/MachineIndependent/LiveTraverser.h",
        "glslang/MachineIndependent/ParseHelper.h",
        "glslang/MachineIndependent/RemoveTree.h",
        "glslang/MachineIndependent/Scan.h",
        "glslang/MachineIndependent/ScanContext.h",
        "glslang/MachineIndependent/SymbolTable.h",
        "glslang/MachineIndependent/Versions.h",
        "glslang/MachineIndependent/attribute.h",
        "glslang/MachineIndependent/gl_types.h",
        "glslang/MachineIndependent/glslang_tab.cpp.h",
        "glslang/MachineIndependent/iomapper.h",
        "glslang/MachineIndependent/localintermediate.h",
        "glslang/MachineIndependent/parseVersions.h",
        "glslang/MachineIndependent/preprocessor/PpContext.h",
        "glslang/MachineIndependent/preprocessor/PpTokens.h",
        "glslang/MachineIndependent/propagateNoContraction.h",
        "glslang/MachineIndependent/reflection.h",
    ],
    data = ["glslang/MachineIndependent/glslang.y"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = [":glslang"],
)

cc_library(
    name = "glslang",
    srcs = [
        "glslang/CInterface/glslang_c_interface.cpp",
        "glslang/GenericCodeGen/CodeGen.cpp",
        "glslang/GenericCodeGen/Link.cpp",
        "glslang/ResourceLimits/ResourceLimits.cpp",
    ],
    hdrs = [
        "glslang/Include/BaseTypes.h",
        "glslang/Include/Common.h",
        "glslang/Include/ConstantUnion.h",
        "glslang/Include/InfoSink.h",
        "glslang/Include/InitializeGlobals.h",
        "glslang/Include/PoolAlloc.h",
        "glslang/Include/ResourceLimits.h",
        "glslang/Include/ShHandle.h",
        "glslang/Include/SpirvIntrinsics.h",
        "glslang/Include/Types.h",
        "glslang/Include/arrays.h",
        "glslang/Include/glslang_c_interface.h",
        "glslang/Include/glslang_c_shader_types.h",
        "glslang/Include/intermediate.h",
        "glslang/Public/ShaderLang.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)
